added practce and fixed play

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </header>
               <div class="landing-options">
                 <a href="play.html"><button class="landing-btn">Play</button></a>
+                <a href="practice.html"><button  class="landing-btn">Practice</button></a>
                 <a href="tutorial.html"><button class="landing-btn">Tutorial</button></a>
               </div>
         </div>
