--- a/play.html
+++ b/play.html
@@ -18,10 +18,11 @@
             <header>
                 <h3>CC  Q<span>U</span>E<span>S</span>T</h3>
             </header>
-              <div class="landing-options">
-                <a href="play.html" class="active"><button class="landing-btn">Play</button></a>
-                <a href="tutorial.html" ><button class="landing-btn">Tutorial</button></a>
-              </div>
+            <div class="landing-options">
+              <a href="play.html"><button class="landing-btn">Play</button></a>
+              <a href="practice.html"><button  class="landing-btn">Practice</button></a>
+              <a href="tutorial.html"><button class="landing-btn">Tutorial</button></a>
+            </div>
         </div>
         
         <div class="body-container">
