--- a/tutorial.html
+++ b/tutorial.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Practice - Caesar Cipher Quest</title>
-  <link rel="stylesheet" href="css/practice.css">
+  <link rel="stylesheet" href="css/tutorial.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 </head>
@@ -16,10 +16,11 @@
             <header>
                 <h3>CC  Q<span>U</span>E<span>S</span>T</h3>
             </header>
-              <div class="landing-options">
-                <a href="play.html"><button class="landing-btn">Play</button></a>
-                <a href="tutorial.html" class="active"><button class="landing-btn">Tutorial</button></a>
-              </div>
+            <div class="landing-options">
+              <a href="play.html"><button class="landing-btn">Play</button></a>
+              <a href="practice.html"><button  class="landing-btn">Practice</button></a>
+              <a href="tutorial.html"><button class="landing-btn">Tutorial</button></a>
+            </div>
         </div>
         
         <div class="body-container">
